fixed auth align

--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -37,3 +37,6 @@
   color: rgb(129, 34, 34);
   font-size: 15px;
 }
+.Auth .Align {
+  text-align: center;
+}
